compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__attribute_erlang.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(erlang, \"one\", \"one_erl\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "one_erl")
pub fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func One(x gleam_P.Int_t) gleam_P.Int_t {
  panic(gleam_P.MakeError(
    "todo",
    "my/mod",
    4,
    "one",
    "`todo` expression evaluated. This code has not yet been implemented.",
    map[string]any{},
  ))
}

func Main() gleam_P.Int_t {
  return One(1)
}
