compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__discarded_names_in_external_are_passed_correctly.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"wibble\", \"Wobble\")\npub fn woo(_ignored: a) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "wibble", "Wobble")
pub fn woo(_ignored: a) -> Nil


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  wibble_P "wibble"
)

const _ = gleam_P.Use_Import
const _ = wibble_P.Use_Import
const Use_Import byte = 0

func Woo[I gleam_P.Type[I]](_ I) gleam_P.Nil_t {
  return wibble_P.Wobble[I]()
}
