compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__empty_package_same_name.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"\", \"Inspect\")\npub fn inspect(x: anything) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "", "Inspect")
pub fn inspect(x: anything) -> Nil

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0
