compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__erlang_bit_patterns.snap
---
source: compiler-core/src/go/tests/externals.rs
assertion_line: 288
expression: "\npub fn should_not_be_generated(x) {\n  case x {\n    <<_, rest:bits>> -> rest\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn should_not_be_generated(x) {
  case x {
    <<_, rest:bits>> -> rest
    _ -> x
  }
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/go/error.gleam:4:10
  │
4 │     <<_, rest:bits>> -> rest
  │          ^^^^^^^^^

This bit array segment option in patterns is not supported for Go compilation.
