compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__external_type_in_current_go_package_same_name.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"\", \"Thing_t\")\npub type Thing(a, b)\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "", "Thing_t")
pub type Thing(a, b)


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0
