compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__full_package_name.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"example.com/organization/module\", \"Inspect\")\nfn show(x: anything) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "example.com/organization/module", "Inspect")
fn show(x: anything) -> Nil

----- COMPILED GO
package mod_P

import (
  module_P "example.com/organization/module"
  gleam_P "example.com/todo/gleam"
)

const _ = module_P.Use_Import
const _ = gleam_P.Use_Import
const Use_Import byte = 0

func show[I gleam_P.Type[I]](x I) gleam_P.Nil_t {
  return module_P.Inspect[I](x)
}
